[package]
name = "ble_central"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "1.26.0", features = ["full"] }
uuid = "1.2.2"
serde = "1.0.152"
btleplug = { version = "0.10", features = ["serde"] }
futures = "0.3.25"
